arreglar pequeño fallo en el cambio de temperaturas

--- a/T1/R3/index.html
+++ b/T1/R3/index.html
@@ -90,7 +90,7 @@
                         case "btn4":
                             let unit = prompt("Quieres pasar de (Cº a F)=>1 o de (F a Cº)=>2");
 
-                            if (unit != 1 || unit != 2) {
+                            if (unit != 1 && unit != 2) {
                                 alert("Numero introducido no valido");
                                 return;
                             }
