--- a/T1/index.html
+++ b/T1/index.html
@@ -34,6 +34,10 @@
             <h2>Redacción 2</h2>
             <a href="./R2/">Ver lista de ejercicios</a>
         </div>
+        <div>
+            <h2>Redacción 3</h2>
+            <a href="./R3/">Ver lista de ejercicios</a>
+        </div>
     </section>
 </body>
 
