regornizar directorios para tener cada asignatura  en pages

--- a/Cliente/index.html
+++ b/Cliente/index.html
@@ -24,11 +24,11 @@
 </head>
 
 <body>
-    <h1>Lista de Asignaturas Erik TR 2ºDAW</h1>
+    <h1>Lista de ejercicios Erik TR 2ºDAW</h1>
     <section>
         <div>
-            <h2>Cliente</h2>
-            <a href="./Cliente/">Acceso</a>
+            <h2>Ejercicios tema 1</h2>
+            <a href="./T1/">Ver lista de ejercicios</a>
         </div>
     </section>
 </body>
