terminar UI UX preguntas 2 y 3

--- a/Cliente/T1/R4/index.html
+++ b/Cliente/T1/R4/index.html
@@ -35,7 +35,12 @@
         <div>
             <h2>Ejercicio 2</h2>
             <p>Sumar todos los numeros dados hasta que nos digan que paremos ignorando cuando nos dan un string</p>
-            <button id="btn1">Dar numeros</button>
+            <button id="btn2">Dar numeros</button>
+        </div>
+        <div>
+            <h2>Ejercicio 3</h2>
+            <p>Introducir todos los parametros que queramos y que nos devuelva el numero de parametros introducidos</p>
+            <button id="btn3">Dar parametros</button>
         </div>
     </section>
 
