modificar por completo idea del controlador ahora cada boton nos muestra el codigo correspondiente con la idea de más tarde hacer que tambien se vean los test

--- a/Cliente/T1/R4/index.html
+++ b/Cliente/T1/R4/index.html
@@ -20,8 +20,11 @@
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
+
+        pre {
+            font-size: 1rem;
+        }
     </style>
-    <script src="./controlador.js" type="module"></script>
 </head>
 
 <body>
@@ -42,8 +45,19 @@
             <p>Introducir todos los parametros que queramos y que nos devuelva el numero de parametros introducidos</p>
             <button id="btn3">Dar parametros</button>
         </div>
+        <div>
+            <h2>Ejercicio 4</h2>
+            <p>Dados dos arrays devuelve la combinacion de estos dos</p>
+
+            <button class="combinarArrays" id="btn4">Combinar Arrays</button>
+        </div>
     </section>
 
+    <div>
+        <pre></pre>
+    </div>
+
+    <script src="./controlador.js" type="module"></script>
 </body>
 
 </html>
