terminar html con todos los ejercicios

--- a/Cliente/T1/R4/index.html
+++ b/Cliente/T1/R4/index.html
@@ -33,28 +33,75 @@
         <div>
             <h2>Ejercicio 1</h2>
             <p>Sumar todos los numeros dados hasta que nos digan que paremos</p>
-            <button id="btn1">Dar numeros</button>
+            <button id="btn1">Ver código</button>
         </div>
         <div>
             <h2>Ejercicio 2</h2>
             <p>Sumar todos los numeros dados hasta que nos digan que paremos ignorando cuando nos dan un string</p>
-            <button id="btn2">Dar numeros</button>
+            <button id="btn2">Ver código</button>
         </div>
         <div>
             <h2>Ejercicio 3</h2>
             <p>Introducir todos los parametros que queramos y que nos devuelva el numero de parametros introducidos</p>
-            <button id="btn3">Dar parametros</button>
+            <button id="btn3">Ver código</button>
         </div>
         <div>
             <h2>Ejercicio 4</h2>
             <p>Dados dos arrays devuelve la combinacion de estos dos</p>
-
-            <button class="combinarArrays" id="btn4">Combinar Arrays</button>
+            <button id="btn4">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 5</h2>
+            <p>Sumar todos los datos de un array pero ignorando los datos cuya posicion es impar</p>
+            <button id="btn5">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 6</h2>
+            <p>Escribe una función que nos devuelve si un número es divisible por tres</p>
+            <button id="btn6">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 7</h2>
+            <p>Escribe una función que nos devuelve si un número es divisible por otro</p>
+            <button id="btn7">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 8</h2>
+            <p>Escribe una función que nos dice si un valor esta comprendido entre otros dos</p>
+            <button id="btn8">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 9</h2>
+            <p>Escribe una función que nos dice si numero tiene o no 3 digitos</p>
+            <button id="btn9">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 10</h2>
+            <p>Escribe una función que nos calcule al area de un rectangulo dadas la base y la altura</p>
+            <button id="btn10">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 11</h2>
+            <p>Escribe una función que nos calcule IMC sabiendo el peso y la altura de alguna persona</p>
+            <button id="btn11">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 12</h2>
+            <p>Escribe una función que nos calcula el precio de un producto sabiendo su precio original y descuento</p>
+            <button id="btn12">Ver código</button>
+        </div>
+        <div>
+            <h2>Ejercicio 13</h2>
+            <p>Escribe una función que nos calcula el factorial de un número</p>
+            <button id="btn13">Ver código</button>
         </div>
     </section>
 
-    <div>
+    <div class="contenedorTest" style="display: none;">
         <pre></pre>
+        <div class="botonesDeTest">
+            <h2>Tests</h2>
+        </div>
     </div>
 
     <script src="./controlador.js" type="module"></script>
