--- a/Cliente/T1/R4/index.html
+++ b/Cliente/T1/R4/index.html
@@ -100,7 +100,7 @@
     <div class="contenedorTest" style="display: none;">
         <pre></pre>
         <div class="botonesDeTest">
-            <h2>Tests</h2>
+            <h3>Tests: </h3>
         </div>
     </div>
 
