cambiar forma para entenedor todo mejor

--- a/Cliente/T1/R4/index.html
+++ b/Cliente/T1/R4/index.html
@@ -99,8 +99,7 @@
 
     <div class="contenedorTest" style="display: none;">
         <pre></pre>
-        <div class="botonesDeTest">
-            <h3>Tests: </h3>
+        <div class="zonaDeTest">
         </div>
     </div>
 
