añadir script html para manejar que funcion mostrar segun el btn pulsado

--- a/Cliente/T1/R5/index.html
+++ b/Cliente/T1/R5/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en<|start_header|>head>
+    <meta charset=" UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Ejercicios T1 - R4</title>
+<style>
+    section {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+        padding: 20px;
+        margin: 0;
+    }
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ejercicios T1 - R4</title>
-    <style>
-        section {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            padding: 20px;
-            margin: 0;
-        }
+    div {
+        border: 1px solid #ddd;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-        div {
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        pre {
-            font-size: 1rem;
-        }
-    </style>
-    <script src="./script.js"></script>
+    pre {
+        font-size: 1rem;
+    }
+</style>
+<script src="./script.js"></script>
 </head>
 
 <body>
@@ -44,12 +42,28 @@
     </section>
 
     <script>
+        //tomamos todos los botones que tenemos
         const BUTTONS = document.querySelectorAll('button');
         BUTTONS.forEach(button => {
             button.addEventListener('click', (e) => {
+                //identificamos cada boton por su id unico
                 const BTN_ID = e.target.id;
 
-                
+                //objeto que relacion cada boton con los metodos que debe mostrar
+                const FUNCIONES_QUE_DEBE_MOSRAR_CADA_BOTON = {
+                    "btn1": [onlyUniquesUsingArray, onlyUniques],
+                    "btn2": [squareAndSum]
+                }
+
+                //creamos los elemento PRE viendo todas las funciones que debe mostrar
+                const PREs = FUNCIONES_QUE_DEBE_MOSRAR_CADA_BOTON[BTN_ID].map(func => {
+                    const PRE = document.createElement('PRE');
+                    PRE.innerHTML = func.toString() + "<br>";
+                    return PRE;
+                });
+
+                //lo insertamos despues del boton
+                button.after(...PREs);
             });
         });
     </script>
