--- a/Cliente/T1/index.html
+++ b/Cliente/T1/index.html
@@ -42,6 +42,10 @@
             <h2>Redacción 4</h2>
             <a href="./R4/">Ver lista de ejercicios</a>
         </div>
+        <div>
+            <h2>Redacción 5</h2>
+            <a href="./R5/">Ver lista de ejercicios</a>
+        </div>
     </section>
 </body>
 
