añadir trabajo individual despliegue git

--- a/Despliegue/index.html
+++ b/Despliegue/index.html
@@ -24,15 +24,15 @@
 </head>
 
 <body>
-    <h1>Lista de ejercicios Erik TR 2ºDAW</h1>
+    <h1>Lista de Asignaturas Erik TR 2ºDAW</h1>
     <section>
         <div>
-            <h2>Ejercicios tema 1</h2>
-            <a href="./T1/">Ver lista de ejercicios</a>
+            <h2>Trabajo Git Individual</h2>
+            <a href="./TrabajoGitIndividual/">Acceso</a>
         </div>
         <div>
-            <h2>Ejercicios tema 2</h2>
-            <a href="./T2/">Ver lista de ejercicios</a>
+            <h2>Trabajo Git Grupal</h2>
+            <a href="./TrabajoGitGrupal/">Acceso</a>
         </div>
     </section>
 </body>
