--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
             <h2>Cliente</h2>
             <a href="./Cliente/">Acceso</a>
         </div>
+        <div>
+            <h2>Despliegue</h2>
+            <a href="./Despliegue/">Acceso</a>
+        </div>
     </section>
 </body>
 
