--- a/Cliente/T2/index.html
+++ b/Cliente/T2/index.html
@@ -27,12 +27,8 @@
     <h1>Lista de ejercicios Erik TR 2ºDAW</h1>
     <section>
         <div>
-            <h2>Ejercicios tema 1</h2>
-            <a href="./T1/">Ver lista de ejercicios</a>
-        </div>
-        <div>
-            <h2>Ejercicios tema 2</h2>
-            <a href="./T2/">Ver lista de ejercicios</a>
+            <h2>Relación de ejercicios T2 - R1</h2>
+            <a href="./R1/">Ver lista de ejercicios</a>
         </div>
     </section>
 </body>
