--- a/Despliegue/TrabajoGitIndividual/html/eleccion.html
+++ b/Despliegue/TrabajoGitIndividual/html/eleccion.html
@@ -152,7 +152,7 @@
         <article>
             <div>
                 <figure>
-                    <img src="./public/eleccion/jira.png" alt="">
+                    <img src="./public/eleccion/Jira.png" alt="">
                 </figure>
             </div>
         </article>
