--- a/Cliente/T2/index.html
+++ b/Cliente/T2/index.html
@@ -30,6 +30,18 @@
             <h2>Relación de ejercicios T2 - R1</h2>
             <a href="./R1/">Ver lista de ejercicios</a>
         </div>
+        <div>
+            <h2>Relación de ejercicios T2 - R2</h2>
+            <a href="./R2/">Ver lista de ejercicios</a>
+        </div>
+        <div>
+            <h2>Relación de ejercicios T2 - R3</h2>
+            <a href="./R3/">Ver lista de ejercicios</a>
+        </div>
+        <div>
+            <h2>Relación de ejercicios T2 - R4</h2>
+            <a href="./R4/">Ver lista de ejercicios</a>
+        </div>
     </section>
 </body>
 
