--- a/Cliente/T2/index.html
+++ b/Cliente/T2/index.html
@@ -46,6 +46,10 @@
             <h2>Relación de ejercicios T2 - R5</h2>
             <a href="./R5/">Ver lista de ejercicios</a>
         </div>
+        <div>
+            <h2>Relación de ejercicios T2 - R5</h2>
+            <a href="./R6/">Ver lista de ejercicios</a>
+        </div>
     </section>
 </body>
 
