--- a/Cliente/T2/index.html
+++ b/Cliente/T2/index.html
@@ -47,6 +47,10 @@
             <a href="./R5/">Ver lista de ejercicios</a>
         </div>
         <div>
+            <h2>Relación de ejercicios T2 - R6</h2>
+            <a href="./R6/">Ver lista de ejercicios</a>
+        </div>
+        <div>
             <h2>Relación de ejercicios T2 - R7</h2>
             <a href="./R7/">Ver lista de ejercicios</a>
         </div>
