añadir rutas deiseño

--- a/Diseño Intefaces/tema3/index.html
+++ b/Diseño Intefaces/tema3/index.html
@@ -27,16 +27,36 @@
     <h1>Lista de Asignaturas Erik TR 2ºDAW</h1>
     <section>
         <div>
-            <h2>Cliente</h2>
-            <a href="./Cliente/">Acceso</a>
+            <h2>Ej2</h2>
+            <a href="./Ej2/">Acceso</a>
         </div>
         <div>
-            <h2>Despliegue</h2>
-            <a href="./Despliegue/">Acceso</a>
+            <h2>Ej3</h2>
+            <a href="./ej3/">Acceso</a>
         </div>
         <div>
-            <h2>Diseño</h2>
-            <a href="./Diseño Intefaces/">Acceso</a>
+            <h2>Ej4 Ej1</h2>
+            <a href="./Ej4/ej1.html">Acceso</a>
+        </div>
+        <div>
+            <h2>Ej4 Ej2</h2>
+            <a href="./Ej4/ej2.html">Acceso</a>
+        </div>
+        <div>
+            <h2>Ej4 Ej3</h2>
+            <a href="./Ej4/ej3.html">Acceso</a>
+        </div>
+        <div>
+            <h2>Ej4 Ej4</h2>
+            <a href="./Ej4/ej4.html">Acceso</a>
+        </div>
+        <div>
+            <h2>Ej5</h2>
+            <a href="./Ej5/">Acceso</a>
+        </div>
+        <div>
+            <h2>Ej6</h2>
+            <a href="./Ej6/">Acceso</a>
         </div>
     </section>
 </body>
