--- a/Diseño Intefaces/index.html
+++ b/Diseño Intefaces/index.html
@@ -27,16 +27,16 @@
     <h1>Lista de Asignaturas Erik TR 2ºDAW</h1>
     <section>
         <div>
-            <h2>Cliente</h2>
-            <a href="./Cliente/">Acceso</a>
+            <h2>Diseños Figma</h2>
+            <a href="./DiseñosFigma/">Acceso</a>
         </div>
         <div>
-            <h2>Despliegue</h2>
-            <a href="./Despliegue/">Acceso</a>
+            <h2>Tema 2</h2>
+            <a href="./tema2/">Acceso</a>
         </div>
         <div>
-            <h2>Diseño</h2>
-            <a href="./Diseño Intefaces/">Acceso</a>
+            <h2>Tema 3</h2>
+            <a href="./tema3/">Acceso</a>
         </div>
     </section>
 </body>
