--- a/Diseño Intefaces/tema3/index.html
+++ b/Diseño Intefaces/tema3/index.html
@@ -58,6 +58,10 @@
             <h2>Ej6</h2>
             <a href="./Ej6/">Acceso</a>
         </div>
+        <div>
+            <h2>Ej7</h2>
+            <a href="./Ej7/">Acceso</a>
+        </div>
     </section>
 </body>
 
