--- a/Diseño Intefaces/tema3/Ej9/index.html
+++ b/Diseño Intefaces/tema3/Ej9/index.html
@@ -19,6 +19,8 @@
     <section></section>
     <section></section>
     <section></section>
+    <section></section>
+    <section></section>
 </body>
 
 </html>
