--- a/Diseño Intefaces/tema3/index.html
+++ b/Diseño Intefaces/tema3/index.html
@@ -66,6 +66,10 @@
             <h2> Ej8</h2>
             <a href="./Ej8/">Acceso</a>
         </div>
+        <div>
+            <h2> Ej9</h2>
+            <a href="./Ej9/">Acceso</a>
+        </div>
     </section>
 </body>
 
