añadir main para no morir de nuevo

--- a/Diseño Intefaces/tema3/Ej9/index.html
+++ b/Diseño Intefaces/tema3/Ej9/index.html
@@ -9,19 +9,21 @@
 </head>
 
 <body>
-    <h1>Diseño de Interfaces Web</h1>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <main>
+        <h1>Diseño de Interfaces Web</h1>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
 </body>
 
 </html>
