--- a/Diseño Intefaces/tema3/index.html
+++ b/Diseño Intefaces/tema3/index.html
@@ -70,6 +70,14 @@
             <h2> Ej9</h2>
             <a href="./Ej9/">Acceso</a>
         </div>
+        <div>
+            <h2> Ej10</h2>
+            <a href="./Ej10/">Acceso</a>
+        </div>
+        <div>
+            <h2> Ej11</h2>
+            <a href="./Ej11/">Acceso</a>
+        </div>
     </section>
 </body>
 
