--- a/Diseño Intefaces/tema3/Ej11/index.html
+++ b/Diseño Intefaces/tema3/Ej11/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <section>
-            <h2>Posicion</h2>
+            <h2>Posicionamiento</h2>
         </section>
         <section class="firstNav">
             <nav>
