--- a/Cliente/T3/R2P2/index.html
+++ b/Cliente/T3/R2P2/index.html
@@ -184,6 +184,8 @@
             un vendedor y cada una de las filas que representan un producto diferente. Además se
             mostrará una última fila con las ventas acumuladas por vendedor, y una última columna con
             las ventas acumuladas por producto.</h3>
+
+            <div id="sellsTable"></div>
     </section>
     <script src="./script.js"></script>
 </body>
